# Oblivinx

./: .gitignore  Cargo.toml  mustbeplanning.txt  oblivinx3x.txt  package.json  prompt.json  prompt.txt  prompts.txt
.github/workflows/: ci.yml  publish.yml
crates/ovn-core/: Cargo.toml
crates/ovn-core/benches/: storage_bench.rs
crates/ovn-core/src/: error.rs  lib.rs  recovery.rs
crates/ovn-core/src/background/: mod.rs  workers.rs
crates/ovn-core/src/compression/: mod.rs
crates/ovn-core/src/distributed/: mod.rs
crates/ovn-core/src/engine/: attach.rs  audit.rs  backup.rs  blob_ops.rs  collection.rs  config.rs  crud.rs  encryption.rs  explain.rs  index_ops.rs  metrics.rs  mod.rs  pragma.rs  relation.rs  security.rs  timeseries.rs  trigger.rs  txn_ops.rs  versioning.rs  view.rs
crates/ovn-core/src/format/: header.rs  mod.rs  obe.rs  page.rs  segment.rs
crates/ovn-core/src/index/: ahit.rs  art.rs  fulltext.rs  geospatial.rs  learned.rs  mod.rs  secondary.rs  vector.rs
crates/ovn-core/src/io/: backend.rs  mod.rs
crates/ovn-core/src/mvcc/: change_stream.rs  hlc.rs  mod.rs  session.rs
crates/ovn-core/src/query/: aggregation.rs  filter.rs  mod.rs  planner.rs  sql_parser.rs  update.rs
crates/ovn-core/src/security/: mod.rs
crates/ovn-core/src/storage/: arc_buffer.rs  blob.rs  btree.rs  buffer_pool.rs  cdc_log.rs  checkpoint.rs  columnar.rs  disk_btree.rs  disk_sstable.rs  doc_heap.rs  freelist.rs  memtable.rs  mod.rs  overflow.rs  page_alloc.rs  slotted_page.rs  sstable.rs  timeseries.rs  wal.rs  zone_map.rs
crates/ovn-core/src/tests/: mod.rs
crates/ovn-core/src/tests/integration/: crash_recovery.rs  mod.rs
crates/ovn-core/src/tests/qa/: checkpoint_atomicity.rs  concurrent_stress.rs  fuzz_corruption.rs  mod.rs  wal_ordering.rs
crates/ovn-core/src/tests/regression/: bug_crash_corrupt.rs  bug_duplicates.rs  bug_panic_corrupt.rs  mod.rs
crates/ovn-neon/: Cargo.toml
crates/ovn-neon/src/: aggregation.rs  attach.rs  blob.rs  collections.rs  crud.rs  explain.rs  index.rs  lib.rs  lifecycle.rs  metrics.rs  pragma.rs  relations.rs  triggers.rs  txn.rs  versioning.rs  views.rs  watch.rs
docs/api/: index.md
example/: dummy.json  dummy_example.js
lib/: index.js
ovnplanning/: 00-MASTER-SPEC.md  01-STORAGE-ENGINE.md  02-WAL-AND-JOURNALING.md  03-DOCUMENT-MODEL.md  04-INDEX-ENGINE.md  05-QUERY-ENGINE.md  06-TRANSACTION-MVCC.md  07-SECURITY-LAYER.md  08-SEARCH-ENGINE.md  09-REPLICATION-SYNC.md  10-CONCURRENCY.md  11-COMPRESSION.md  12-OBSERVABILITY.md  13-API-DESIGN.md  14-PLUGIN-WASM.md  15-QUERY-LANGUAGE-OQL.md  16-PLATFORM-BUILD.md  17-TESTING-STRATEGY.md  18-ROADMAP-MILESTONES.md  19-GLOSSARY.md  FASE2-PROJECT-REGISTRY.md
ovnplanning/20-ADR/: ADR-001-storage-engine.md  ADR-002-wal-vs-shadow-paging.md  ADR-003-encryption-cipher.md  ADR-004-query-language-oql.md  ADR-005-mvcc-vs-locking.md  ADR-006-vector-index-hnsw.md  ADR-007-plugin-sandbox-wasm.md  ADR-008-compression-codec-default.md  ADR-009-replication-protocol.md  ADR-010-api-design.md
scripts/: build.ps1  build.sh  check-before-commit.sh  detect-platform.js  test.sh
tests/integration/: engine.test.js
